--- a/css/main.css
+++ b/css/main.css
@@ -111,3 +111,124 @@ a:hover {
 
 	color: #ff5964;
 }
+#main-section h1{
+  font-size: 40px;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+.service-img{
+  display: inline!important;
+}
+.service {
+  margin: 30px 50px 0px 50px;
+  text-align: center;
+  display: inline-block;
+  float: none;
+}
+#main-section h3 {
+  font-size: 22px;
+  font-weight: 300;
+  margin-bottom: 38px;
+  line-height: 27px;
+  color: #333;
+  font-family: 'Roboto-Condensed', sans-serif;
+  margin-top: 25px;
+}
+.row-centered {
+    text-align:center;
+}
+#main-section img:hover{
+  -webkit-transform: scale3d(1.2, 1.2, 1);
+  -moz-transform: scale3d(1.2, 1.2, 1);
+  transform: scale3d(1.2, 1.2, 1);
+}
+#main-section img {
+  height: 200px
+  width: 200px;
+  -webkit-transform: scale3d(1, 1, 1);
+  -moz-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+  -webkit-transition: -webkit-transform 400ms;
+  -moz-transition: -moz-transform 400ms;
+  transition: transform 400ms;
+}
+.service-i{
+  display: inline!important;
+}
+#main-section i:hover{
+  -webkit-transform: scale3d(1.2, 1.2, 1);
+  -moz-transform: scale3d(1.2, 1.2, 1);
+  transform: scale3d(1.2, 1.2, 1);
+}
+#main-section i{
+  height: 200px
+  width: 200px;
+  -webkit-transform: scale3d(1, 1, 1);
+  -moz-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+  -webkit-transition: -webkit-transform 400ms;
+  -moz-transition: -moz-transform 400ms;
+  transition: transform 400ms;
+}
+#footer {
+  background: #fff;
+  padding: 25px 0;
+  color: #555;
+}
+#footer .copyright {
+  font-size: 17px;
+  margin-bottom: 0;
+  margin-top: 10px;
+}
+#footer .social {
+  text-align: right;
+  margin-bottom: 0;
+}
+#footer .social li {
+  display: inline-block;
+  margin-right: 15px;
+}
+#footer .social li a {
+  font-size: 22px;
+  color: #ff5964;
+}
+#call-to-action {
+  background: #ff5964;
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 80px 0;
+  text-align: center;
+  position: relative;
+  color: #fff;
+}
+#call-to-action .block {
+  position: relative;
+  z-index: 99;
+  color: #fff;
+}
+#call-to-action .block h2 {
+  margin-bottom: 15px;
+  color: #fff;
+}
+#call-to-action .block p {
+  font-size: 15px;
+  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 20px;
+}
+#call-to-action .block .btn-contact {
+  background: #fff;
+  border: none;
+  color: #ff5964;
+  padding: 16px 35px;
+  margin-top: 20px;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  border-radius: 0;
+}
+#call-to-action .block .btn-contact i {
+  margin-right: 10px;
+}
