--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ a:hover {
   background: transparent;
 }
 #top-bar.animated-header {
-  padding: 20px 0;
+  padding: 10px 0;
   background: #ffffff;
   box-shadow: none;
 }
@@ -71,16 +71,16 @@ a:hover {
   background: url('../images/back.jpg') no-repeat 50%;
   background-size: cover;
   background-attachment: fixed;
-  padding: 250px 0;
+  padding: 15% 0;
   color: #fff;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
   position: relative;
-  height: 700px;
+  height: 10%;
 }
 #slider-section:before {
   content: '';
   z-index: 9;
-  background: rgba(255, 255, 255, 0.78);
+  background: rgba(175, 175, 175, 0.75);
   position: absolute;
   top: 0;
   left: 0;
@@ -231,4 +231,33 @@ a:hover {
 }
 #call-to-action .block .btn-contact i {
   margin-right: 10px;
+}
+#market-main-section{
+  position: relative;
+  margin-top: 5%;
+  margin-bottom: 5%
+}
+.main-list{
+  padding: 5% 5% 0 5%
+}
+.main-list h4{
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 15px;
+  color: #ff5964;
+  font-family: 'Roboto-Condensed', sans-serif;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+#footer hr{
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+#contact-form{
+  position: relative;
+  margin-top: 5%;
+  margin-bottom: 5%
 }
