--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,9 +13,10 @@
     <link rel="stylesheet" href="stylesheets/font-awesome.css">
 	<link rel="stylesheet" href="stylesheets/form-elements.css">
 	<link rel="stylesheet" type="text/css" href="stylesheets/form-style.css">
+  <link rel="stylesheet" href="stylesheets/main.css">
 
     <!--Javascript-->
-    
+
 
     <!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -48,7 +49,7 @@
                 <span class="icon-bar"></span>
                 </button>
                 <!-- /responsive nav button -->
-                
+
                 <!-- logo -->
                 <div class="navbar-brand">
                     <a href="index" >
@@ -71,7 +72,7 @@
                                 <li><a href="market">Market</a></li>
                                 <li><a href="campus">Campus News</a></li>
                                 <li><a href="places">Nearby Places</a></li>
-                                <li><a href="promotions">Promotions</a></li> 
+                                <li><a href="promotions">Promotions</a></li>
     						</ul>
   						</li>
                         <li><a href="contact">Contact</a></li>
@@ -86,9 +87,9 @@
 	HEADER SECTION END
 	============================================-->
         <!-- Top content -->
-    <section id='contact-form'>    
+    <section id='contact-form'>
         <div class="top-content">
-        	
+
             <div class="inner-bg">
                 <div class="container">
                     <div class="row">
@@ -123,7 +124,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </section>
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
